added basic style to input field

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,3 +47,13 @@ body {
     }
   }
 }
+
+.input-form {
+  &__help {
+    display: none;
+  }
+
+  &__input-field:focus + &__help {
+    display: unset;
+  }
+}
